Fixing image on mobile

--- a/index.css
+++ b/index.css
@@ -73,8 +73,7 @@
     color: var(--text-desaturated-blue);
     min-height: 100svh;
     min-height: 100vh;
-    /* padding-top: 4rem; */
-    padding-top: 3rem;
+    padding-top: 4rem;
   }
 
   main {
@@ -104,7 +103,7 @@
     font-size: 2rem;
     font-weight: var(--fw-700);
     /* padding-block: 1rem; */
-    padding-top: 6rem;
+    padding-top: 5rem;
   }
 
   ul {
